dataset and preprocessing file updated

--- a/Symptoms2OTC.ipynb
+++ b/Symptoms2OTC.ipynb
@@ -16,197 +16,146 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "id": "pj6cQ6tsDFMV"
-      },
-      "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import re\n",
         "\n",
-        "# Load the disease-symptom dataset\n",
-        "df_disease_symptom = pd.read_csv('dataset.csv')\n",
-        "# Load the drugs disease dataset\n",
+        "# Load drugs to disease dataset\n",
         "df_drugs_disease = pd.read_csv('drugs_side_effects_drugs_com.csv')\n",
         "\n",
-        "# Fill any missing values\n",
-        "df_drugs_disease.fillna('', inplace=True)\n",
+        "# Load disease_drug dataset\n",
+        "df_disease_drug = pd.read_csv('final.csv')\n",
         "\n",
-        "# Fill any missing values\n",
-        "df_disease_symptom.fillna('', inplace=True)\n",
-        "\n",
-        "# Combine all 17 symptom columns into a single list\n",
-        "symptom_columns = [f'Symptom_{i}' for i in range(1, 18)]\n",
-        "all_symptoms = df_disease_symptom[symptom_columns].values.flatten()\n",
-        "\n",
-        "# Remove empty strings and get unique symptoms\n",
-        "unique_symptoms = pd.Series(all_symptoms).replace('', pd.NA).dropna().unique()\n",
-        "\n",
-        "# Convert to list for easier handling\n",
-        "unique_symptoms_list = unique_symptoms.tolist()\n",
-        "\n",
-        "# Print the list of unique symptoms\n",
-        "# print(unique_symptoms_list)\n",
-        "\n",
-        "# Convert disease names to lowercase and strip leading/trailing whitespace\n",
-        "# df_disease_symptom['Disease'] = df_disease_symptom['Disease'].str.lower().str.strip()\n",
-        "# df_drugs_disease['medical_condition'] = df_drugs_disease['medical_condition'].str.lower().str.strip()\n",
-        "\n",
-        "# df_merged = pd.merge(df_disease_symptom, df_drugs_disease, left_on='Disease', right_on='medical_condition', how='inner')\n",
-        "\n",
-        "# # Drop the redundant 'medical_condition' column after merging\n",
-        "# df_merged.drop('medical_condition', axis=1, inplace=True)\n",
-        "\n",
-        "# # Fill any remaining missing values if necessary\n",
-        "# df_merged.fillna('', inplace=True)\n",
-        "\n",
-        "# # Save the merged dataset to a new CSV file\n",
-        "# df_merged.to_csv('merged_dataset.csv', index=False)\n",
-        "\n",
-        "# # Display the first few rows of the merged dataset\n",
-        "# print(df_merged.head())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Function to extract symptoms from medical condition description\n",
-        "def extract_symptoms(description, symptoms_list):\n",
-        "    description = description.lower()\n",
-        "    found_symptoms = [symptom for symptom in symptoms_list if re.search(r'\\b' + re.escape(symptom) + r'\\b', description)]\n",
-        "    return found_symptoms"
+        "# Load disease to symptoms dataset\n",
+        "df_disease_symptoms = pd.read_csv('dataset.csv')\n"
       ],
       "metadata": {
-        "id": "3Jpbi3FG6Oan"
+        "id": "55HrZYn6DZ0j"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df_drugs_disease['extracted_symptoms'] = df_drugs_disease['medical_condition_description'].apply(lambda x: extract_symptoms(x, unique_symptoms_list))\n",
-        "\n",
-        "# Split the extracted symptoms into separate columns\n",
-        "df_exploded_symptoms = df_drugs_disease['extracted_symptoms'].apply(pd.Series)\n"
-      ],
-      "metadata": {
-        "id": "w46kEb806PCm"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Combine symptom columns into a single list for each disease\n",
-        "df_disease_symptom['all_symptoms'] = df_disease_symptom.apply(\n",
-        "    lambda row: list(filter(None, [row[f'Symptom_{i}'] for i in range(1, 18)])), axis=1\n",
-        ")\n",
-        "\n",
-        "# Convert disease names to lowercase and strip leading/trailing whitespace\n",
-        "df_disease_symptom['Disease'] = df_disease_symptom['Disease'].str.lower().str.strip()\n",
+        "# Clean disease names in all datasets\n",
         "df_drugs_disease['medical_condition'] = df_drugs_disease['medical_condition'].str.lower().str.strip()\n",
+        "df_disease_drug['disease'] = df_disease_drug['disease'].str.lower().str.strip()\n",
+        "df_disease_symptoms['disease'] = df_disease_symptoms['Disease'].str.lower().str.strip()\n",
+        "df_disease_symptoms.drop(['Disease'], axis=1, inplace=True)\n"
+      ],
+      "metadata": {
+        "id": "T15nbxJnDh4M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
         "\n",
-        "# Merge the datasets on the disease column\n",
-        "df_merged = pd.merge(df_drugs_disease, df_disease_symptom, left_on='medical_condition', right_on='Disease', how='inner')\n",
+        "def extract_symptoms(description):\n",
+        "    # Define a regex pattern to extract symptoms\n",
+        "    pattern = r'\\b(symptom(?:s)?\\b|\\bcondition(?:s)?\\b|\\bmanifest(?:s)?\\b|\\bpresent(?:s)?\\b|\\bcomplain(?:s)?\\b|\\bfind(?:s)?\\b)\\b(?:\\w+\\W+\\w+){0,5}?(\\w+\\b)'\n",
+        "    symptoms = re.findall(pattern, description, re.IGNORECASE)\n",
+        "    return [symptom[1] for symptom in symptoms]\n",
         "\n",
-        "# Combine symptoms from both datasets\n",
-        "def combine_symptoms(row):\n",
-        "    symptoms = set(row['extracted_symptoms'] + row['all_symptoms'])\n",
-        "    return list(symptoms)\n",
+        "# Apply the function to extract symptoms from medical_condition_description\n",
+        "df_drugs_disease['extracted_symptoms'] = df_drugs_disease['medical_condition_description'].apply(extract_symptoms)\n"
+      ],
+      "metadata": {
+        "id": "MjXTUZwSDp6X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Merge disease_drug dataset with drugs to disease dataset on disease and drug columns\n",
+        "df_merged = pd.merge(df_drugs_disease, df_disease_drug, left_on=['medical_condition', 'drug_name'], right_on=['disease', 'drug'], how='inner')\n",
         "\n",
-        "df_merged['combined_symptoms'] = df_merged.apply(combine_symptoms, axis=1)\n",
+        "# Merge resulting dataset with disease to symptoms dataset on disease column\n",
+        "df_final = pd.merge(df_merged, df_disease_symptoms, on='disease', how='left')\n",
         "\n",
-        "# Split the combined symptoms into separate columns\n",
-        "df_combined_symptoms = df_merged['combined_symptoms'].apply(pd.Series)\n",
+        "# Fill NaN values in symptom columns with empty strings\n",
+        "symptom_columns = [f'Symptom_{i}' for i in range(1, 18)]\n",
+        "df_final[symptom_columns] = df_final[symptom_columns].fillna('')\n",
         "\n",
-        "# Rename the columns to Symptom_1, Symptom_2, etc.\n",
-        "df_combined_symptoms.columns = [f'Symptom_{i+1}' for i in range(df_combined_symptoms.shape[1])]\n",
+        "# Combine extracted symptoms from medical_condition_description and symptom columns\n",
+        "df_final['combined_symptoms'] = df_final.apply(lambda row: list(set(row['extracted_symptoms'] + [symptom for symptom in row[symptom_columns] if symptom])), axis=1)\n",
         "\n",
-        "# Concatenate the combined symptoms columns with the merged dataframe\n",
-        "df_final = pd.concat([df_merged, df_combined_symptoms], axis=1)\n",
+        "# Drop all columns except drug_name, disease, and symptom columns\n",
+        "columns_to_keep = ['drug_name', 'disease'] + symptom_columns\n",
+        "df_final = df_final[columns_to_keep]\n",
         "\n",
-        "# Drop unnecessary columns\n",
-        "df_final.drop(['extracted_symptoms', 'all_symptoms', 'combined_symptoms', 'Disease'], axis=1, inplace=True)\n",
+        "# Save the final dataset to a CSV file\n",
+        "df_final.to_csv('final_dataset_with_symptoms.csv', index=False)\n",
         "\n",
-        "# Save the final merged dataset to a new CSV file\n",
-        "df_final.to_csv('final_merged_dataset.csv', index=False)\n",
-        "\n",
-        "# Display the first few rows of the final merged dataset\n",
-        "print(df_merged.head())"
+        "# Display the first few rows of the final dataset\n",
+        "print(df_final.head())\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "zJCjX-JD7N-2",
-        "outputId": "534ef907-9d75-4a06-de7c-686e2abe7901"
+        "id": "L4dBZq68DtOo",
+        "outputId": "fd9b8bf8-29f7-4d10-efdf-183ab3fabf8f"
       },
-      "execution_count": 17,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "     drug_name medical_condition  \\\n",
-            "0  doxycycline              acne   \n",
-            "1  doxycycline              acne   \n",
-            "2  doxycycline              acne   \n",
-            "3  doxycycline              acne   \n",
-            "4  doxycycline              acne   \n",
+            "     drug_name disease            Symptom_1            Symptom_2    Symptom_3  \\\n",
+            "0  doxycycline    acne            skin_rash   pus_filled_pimples   blackheads   \n",
+            "1  doxycycline    acne            skin_rash   pus_filled_pimples   blackheads   \n",
+            "2  doxycycline    acne   pus_filled_pimples           blackheads     scurring   \n",
+            "3  doxycycline    acne            skin_rash           blackheads     scurring   \n",
+            "4  doxycycline    acne            skin_rash   pus_filled_pimples     scurring   \n",
             "\n",
-            "                                        side_effects generic_name  \\\n",
-            "0  (hives, difficult breathing, swelling in your ...  doxycycline   \n",
-            "1  (hives, difficult breathing, swelling in your ...  doxycycline   \n",
-            "2  (hives, difficult breathing, swelling in your ...  doxycycline   \n",
-            "3  (hives, difficult breathing, swelling in your ...  doxycycline   \n",
-            "4  (hives, difficult breathing, swelling in your ...  doxycycline   \n",
+            "   Symptom_4 Symptom_5 Symptom_6 Symptom_7 Symptom_8 Symptom_9 Symptom_10  \\\n",
+            "0   scurring                                                                \n",
+            "1   scurring                                                                \n",
+            "2                                                                           \n",
+            "3                                                                           \n",
+            "4                                                                           \n",
             "\n",
-            "                                 drug_classes  \\\n",
-            "0  Miscellaneous antimalarials, Tetracyclines   \n",
-            "1  Miscellaneous antimalarials, Tetracyclines   \n",
-            "2  Miscellaneous antimalarials, Tetracyclines   \n",
-            "3  Miscellaneous antimalarials, Tetracyclines   \n",
-            "4  Miscellaneous antimalarials, Tetracyclines   \n",
-            "\n",
-            "                                         brand_names activity rx_otc  \\\n",
-            "0  Acticlate, Adoxa CK, Adoxa Pak, Adoxa TT, Alod...      87%     Rx   \n",
-            "1  Acticlate, Adoxa CK, Adoxa Pak, Adoxa TT, Alod...      87%     Rx   \n",
-            "2  Acticlate, Adoxa CK, Adoxa Pak, Adoxa TT, Alod...      87%     Rx   \n",
-            "3  Acticlate, Adoxa CK, Adoxa Pak, Adoxa TT, Alod...      87%     Rx   \n",
-            "4  Acticlate, Adoxa CK, Adoxa Pak, Adoxa TT, Alod...      87%     Rx   \n",
-            "\n",
-            "  pregnancy_category csa  ... Symptom_10 Symptom_11 Symptom_12 Symptom_13  \\\n",
-            "0                  D   N  ...                                               \n",
-            "1                  D   N  ...                                               \n",
-            "2                  D   N  ...                                               \n",
-            "3                  D   N  ...                                               \n",
-            "4                  D   N  ...                                               \n",
-            "\n",
-            "  Symptom_14 Symptom_15 Symptom_16 Symptom_17  \\\n",
-            "0                                               \n",
-            "1                                               \n",
-            "2                                               \n",
-            "3                                               \n",
-            "4                                               \n",
-            "\n",
-            "                                        all_symptoms  \\\n",
-            "0  [ skin_rash,  pus_filled_pimples,  blackheads,...   \n",
-            "1  [ skin_rash,  pus_filled_pimples,  blackheads,...   \n",
-            "2      [ pus_filled_pimples,  blackheads,  scurring]   \n",
-            "3               [ skin_rash,  blackheads,  scurring]   \n",
-            "4       [ skin_rash,  pus_filled_pimples,  scurring]   \n",
-            "\n",
-            "                                   combined_symptoms  \n",
-            "0  [ scurring,  blackheads,  skin_rash,  sweating...  \n",
-            "1  [ scurring,  blackheads,  skin_rash,  sweating...  \n",
-            "2  [ blackheads,  pus_filled_pimples,  sweating, ...  \n",
-            "3    [ blackheads,  skin_rash,  sweating,  scurring]  \n",
-            "4  [ scurring,  blackheads,  skin_rash,  sweating...  \n",
-            "\n",
-            "[5 rows x 44 columns]\n"
+            "  Symptom_11 Symptom_12 Symptom_13 Symptom_14 Symptom_15 Symptom_16 Symptom_17  \n",
+            "0                                                                               \n",
+            "1                                                                               \n",
+            "2                                                                               \n",
+            "3                                                                               \n",
+            "4                                                                               \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assuming df_final is already defined and contains your final dataset\n",
+        "\n",
+        "# Get the shape of the dataframe (rows, columns)\n",
+        "total_rows = df_final.shape[0]\n",
+        "\n",
+        "print(f\"Total number of rows in the final dataset: {total_rows}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IZNfNTqgEWzd",
+        "outputId": "21653b3c-6477-46f0-8efe-80d67013520c"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total number of rows in the final dataset: 23437\n"
           ]
         }
       ]
